--- a/Modelbouwer/View/SupplierContactFunctionManagement.xaml
+++ b/Modelbouwer/View/SupplierContactFunctionManagement.xaml
@@ -1,161 +1,173 @@
 ﻿<Page
-	x:Class="Modelbouwer.View.SupplierContactFunctionManagement"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:helper="clr-namespace:Modelbouwer.Helper"
-	xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-	xmlns:local="clr-namespace:Modelbouwer.View"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
-	Title="SupplierContactFunctionManagement"
-	d:DataContext="{d:DesignInstance Type={x:Type viewmodels:SupplierContactTypeViewModel}}"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
-	mc:Ignorable="d">
+    x:Class="Modelbouwer.View.SupplierContactFunctionManagement"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helper="clr-namespace:Modelbouwer.Helper"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:local="clr-namespace:Modelbouwer.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
+    Title="SupplierContactFunctionManagement"
+    d:DataContext="{d:DesignInstance Type={x:Type viewmodels:SupplierContactTypeViewModel}}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d"
+    >
 
-	<Grid>
-		<!--#region Global grid definition-->
-		<Grid.RowDefinitions>
-			<RowDefinition Height="95" />
-			<RowDefinition Height="32" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="40" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="20" />
-		</Grid.RowDefinitions>
-		<!--#endregion-->
+    <Grid>
+        <!--#region Global grid definition-->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="95" />
+            <RowDefinition Height="32" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="20" />
+        </Grid.RowDefinitions>
+        <!--#endregion-->
 
-		<!--#region Title of the page-->
-		<StackPanel
-			Grid.Row="0"
-			Margin="10,0,10,0"
-			Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
-			<TextBlock Style="{DynamicResource DefaultTitle}" Text="{StaticResource Edit.ContactType.Title}" />
-			<Canvas>
-				<Path Style="{DynamicResource DefaultTitleLine}" />
-			</Canvas>
-			<TextBlock Style="{DynamicResource DefaultSubTitle}" Text="{StaticResource Edit.ContactType.Subtitle}" />
-		</StackPanel>
-		<!--#endregion-->
+        <!--#region Title of the page-->
+        <StackPanel
+            Grid.Row="0"
+            Margin="10,0,10,0"
+            Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}"
+            >
+            <TextBlock Style="{DynamicResource DefaultTitle}" Text="{StaticResource Edit.ContactType.Title}" />
+            <Canvas>
+                <Path Style="{DynamicResource DefaultTitleLine}" />
+            </Canvas>
+            <TextBlock Style="{DynamicResource DefaultSubTitle}" Text="{StaticResource Edit.ContactType.Subtitle}" />
+        </StackPanel>
+        <!--#endregion-->
 
-		<!--#region Hidden fields-->
-		<TextBox
-			x:Name="inpId"
-			Grid.Row="2"
-			Style="{DynamicResource HiddenTextBox}"
-			Text="{Binding SelectedContactType.ContactTypeId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-		<!--#endregion-->
+        <!--#region Selected Item Card-->
+        <Grid
+            Grid.Row="1"
+            Margin="10,2"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            >
+            <!--#region Grid Card defenition-->
+            <!--#region Row defenition-->
+            <Grid.RowDefinitions>
+                <RowDefinition Height="32" />
+            </Grid.RowDefinitions>
+            <!--#endregion-->
 
-		<!--#region Selected Item Card-->
-		<Grid
-			Grid.Row="1"
-			Margin="10,2"
-			HorizontalAlignment="Left"
-			VerticalAlignment="Center">
-			<!--#region Grid Card defenition-->
-			<!--#region Row defenition-->
-			<Grid.RowDefinitions>
-				<RowDefinition Height="32" />
-			</Grid.RowDefinitions>
-			<!--#endregion-->
+            <!--#region Colomn defenition-->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <!--#endregion-->
+            <!--#endregion-->
 
-			<!--#region Colomn defenition-->
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="120" />
-				<ColumnDefinition Width="*" />
-			</Grid.ColumnDefinitions>
-			<!--#endregion-->
-			<!--#endregion-->
+            <!--#region Name-->
+            <Label
+                Grid.Row="0"
+                Content="{StaticResource Edit.ContactType.Name.Label}"
+                Style="{DynamicResource DefaultLabel}"
+                />
 
-			<!--#region Name-->
-			<Label
-				Grid.Row="0"
-				Content="{StaticResource Edit.ContactType.Name.Label}"
-				Style="{DynamicResource DefaultLabel}" />
+            <TextBox
+                x:Name="inpContactTypeName"
+                Grid.Row="1"
+                Grid.Column="1"
+                Width="310"
+                MaxLength="45"
+                Style="{DynamicResource DefaultTextBox}"
+                Tag="{StaticResource Edit.ContactType.Name.Tag}"
+                Text="{Binding SelectedContactType.ContactTypeName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                ToolTip="{StaticResource Edit.ContactType.Name.Tooltip}"
+                />
+            <!--#endregion-->
+        </Grid>
+        <!--#endregion-->
 
-			<TextBox
-				x:Name="inpContactTypeName"
-				Grid.Row="1"
-				Grid.Column="1"
-				Width="310"
-				MaxLength="45"
-				Style="{DynamicResource DefaultTextBox}"
-				Tag="{StaticResource Edit.ContactType.Name.Tag}"
-				Text="{Binding SelectedContactType.ContactTypeName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-				ToolTip="{StaticResource Edit.ContactType.Name.Tooltip}" />
-			<!--#endregion-->
-		</Grid>
-		<!--#endregion-->
+        <!--#region Hidden fields-->
+        <TextBox
+            x:Name="inpId"
+            Grid.Row="2"
+            Style="{DynamicResource HiddenTextBox}"
+            Text="{Binding SelectedContactType.ContactTypeId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            />
+        <!--#endregion-->
 
-		<!--#region Action toolbar-->
-		<ToolBarTray
-			Grid.Row="3"
-			Margin="10,2,0,2"
-			Style="{DynamicResource DefaultToolBarTray}">
-			<ToolBar x:Name="generalToolbar" Style="{DynamicResource DefaultToolBar}">
-				<Button Click="ButtonNew" ToolTip="{StaticResource Edit.ContactType.Action.Tooltip.Add}">
-					<Image Style="{DynamicResource ToolBarAddIcon}" />
-				</Button>
-				<Button Click="ButtonDelete" ToolTip="{StaticResource Edit.ContactType.Action.Tooltip.Delete}">
-					<Image Style="{DynamicResource ToolBarDeleteIcon}" />
-				</Button>
-				<Button Click="ButtonSave" ToolTip="{StaticResource Edit.ContactType.Action.Tooltip.Save}">
-					<Image Style="{DynamicResource ToolBarSaveIcon}" />
-				</Button>
-			</ToolBar>
-		</ToolBarTray>
+        <!--#region Action toolbar-->
+        <ToolBarTray
+            Grid.Row="3"
+            Margin="10,2,0,2"
+            Style="{DynamicResource DefaultToolBarTray}"
+            >
+            <ToolBar x:Name="generalToolbar" Style="{DynamicResource DefaultToolBar}">
+                <Button Click="ButtonNew" ToolTip="{StaticResource Edit.ContactType.Action.Tooltip.Add}">
+                    <Image Style="{DynamicResource ToolBarAddIcon}" />
+                </Button>
+                <Button Click="ButtonDelete" ToolTip="{StaticResource Edit.ContactType.Action.Tooltip.Delete}">
+                    <Image Style="{DynamicResource ToolBarDeleteIcon}" />
+                </Button>
+                <Button Click="ButtonSave" ToolTip="{StaticResource Edit.ContactType.Action.Tooltip.Save}">
+                    <Image Style="{DynamicResource ToolBarSaveIcon}" />
+                </Button>
+            </ToolBar>
+        </ToolBarTray>
 
-		<!--#endregion-->
+        <!--#endregion-->
 
-		<!--#region Datagrid-->
-		<syncfusion:SfDataGrid
-			x:Name="dataGrid"
-			Grid.Row="4"
-			Margin="10,5"
-			AllowDeleting="False"
-			AllowEditing="False"
-			AllowFiltering="True"
-			AllowGrouping="True"
-			AllowResizingColumns="True"
-			AutoGenerateColumns="False"
-			ItemsSource="{Binding SupplierContactType, Mode=TwoWay}"
-			SelectedItem="{Binding SelectedContactType, Mode=TwoWay}"
-			SortClickAction="DoubleClick">
-			<syncfusion:SfDataGrid.Columns>
-				<syncfusion:GridTextColumn
-					HeaderText="{StaticResource Edit.ContactType.DataGrid.Header.Id}"
-					HorizontalHeaderContentAlignment="Left"
-					IsHidden="True"
-					MappingName="ContactTypeId" />
-				<syncfusion:GridTextColumn
-					AllowFiltering="True"
-					AllowSorting="True"
-					HeaderText="{StaticResource Edit.ContactType.DataGrid.Header.Name}"
-					HorizontalHeaderContentAlignment="Left"
-					MappingName="ContactTypeName" />
-			</syncfusion:SfDataGrid.Columns>
-		</syncfusion:SfDataGrid>
-		<!--#endregion-->
+        <!--#region Datagrid-->
+        <syncfusion:SfDataGrid
+            x:Name="dataGrid"
+            Grid.Row="4"
+            Margin="10,5"
+            AllowDeleting="False"
+            AllowEditing="False"
+            AllowFiltering="True"
+            AllowGrouping="True"
+            AllowResizingColumns="True"
+            AutoGenerateColumns="False"
+            ItemsSource="{Binding SupplierContactType, Mode=TwoWay}"
+            SelectedItem="{Binding SelectedContactType, Mode=TwoWay}"
+            SortClickAction="DoubleClick"
+            >
+            <syncfusion:SfDataGrid.Columns>
+                <syncfusion:GridTextColumn
+                    HeaderText="{StaticResource Edit.ContactType.DataGrid.Header.Id}"
+                    HorizontalHeaderContentAlignment="Left"
+                    IsHidden="True"
+                    MappingName="ContactTypeId"
+                    />
+                <syncfusion:GridTextColumn
+                    AllowFiltering="True"
+                    AllowSorting="True"
+                    HeaderText="{StaticResource Edit.ContactType.DataGrid.Header.Name}"
+                    HorizontalHeaderContentAlignment="Left"
+                    MappingName="ContactTypeName"
+                    />
+            </syncfusion:SfDataGrid.Columns>
+        </syncfusion:SfDataGrid>
+        <!--#endregion-->
 
-		<!--#region Statusbar-->
-		<DockPanel
-			Grid.Row="5"
-			Height="30"
-			Margin="10,0,10,0"
-			VerticalAlignment="Center"
-			Background="LightGray">
-			<Grid>
-				<StackPanel Orientation="Horizontal">
-					<TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Import.Statusline.Text}" />
-					<TextBlock
-						x:Name="dispStatusLine"
-						Style="{DynamicResource Status.Description}"
-						Text="{DynamicResource Import.Statusline.Description}" />
-				</StackPanel>
-			</Grid>
-		</DockPanel>
-		<!--#endregion-->
-	</Grid>
+        <!--#region Statusbar-->
+        <DockPanel
+            Grid.Row="5"
+            Height="30"
+            Margin="10,0,10,0"
+            VerticalAlignment="Center"
+            Background="LightGray"
+            >
+            <Grid>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Import.Statusline.Text}" />
+                    <TextBlock
+                        x:Name="dispStatusLine"
+                        Style="{DynamicResource Status.Description}"
+                        Text="{DynamicResource Import.Statusline.Description}"
+                        />
+                </StackPanel>
+            </Grid>
+        </DockPanel>
+        <!--#endregion-->
+    </Grid>
 </Page>
